Add kafka and a few more changes